# tokito

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  Makefile  README.md  ROADMAP.md  SECURITY.md  deny.toml  docker-compose.yml
.config/: nextest.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
assets/base-symbols/: LICENSE.md
assets/base-symbols/Amplifier_Operational/: LM358.tokito_sym  TL072.tokito_sym
assets/base-symbols/Connector_Generic/: Conn_01x01.tokito_sym  Conn_01x02.tokito_sym  Conn_01x03.tokito_sym  Conn_01x04.tokito_sym  Conn_01x05.tokito_sym  Conn_01x06.tokito_sym  Conn_01x07.tokito_sym  Conn_01x08.tokito_sym  Conn_01x09.tokito_sym  Conn_01x10.tokito_sym  Conn_01x11.tokito_sym  Conn_01x12.tokito_sym  Conn_01x13.tokito_sym  Conn_01x14.tokito_sym  Conn_01x15.tokito_sym  Conn_01x16.tokito_sym  Conn_01x17.tokito_sym  Conn_01x18.tokito_sym  Conn_01x19.tokito_sym  Conn_01x20.tokito_sym
assets/base-symbols/Device/: Battery.tokito_sym  C.tokito_sym  C_0402.tokito_sym  C_0603.tokito_sym  C_0805.tokito_sym  C_1206.tokito_sym  C_1210.tokito_sym  C_2010.tokito_sym  C_2512.tokito_sym  C_Network04.tokito_sym  C_Polarized.tokito_sym  C_Variable.tokito_sym  Crystal.tokito_sym  D.tokito_sym  D_Schottky.tokito_sym  D_Zener.tokito_sym  Fuse.tokito_sym  L.tokito_sym  LED.tokito_sym  LED_KGBR.tokito_sym  L_0402.tokito_sym  L_0603.tokito_sym  L_0805.tokito_sym  L_1206.tokito_sym  L_1210.tokito_sym  L_2010.tokito_sym  L_2512.tokito_sym  L_Ferrite.tokito_sym  R.tokito_sym  R_0402.tokito_sym  R_0603.tokito_sym  R_0805.tokito_sym  R_1206.tokito_sym  R_1210.tokito_sym  R_2010.tokito_sym  R_2512.tokito_sym  R_Network04.tokito_sym
assets/base-symbols/Diode/: 1N4148.tokito_sym  1N5819.tokito_sym
assets/base-symbols/Interface/: AD8605.tokito_sym  AT24C256.tokito_sym  CH340G.tokito_sym  LT1013.tokito_sym  MAX232.tokito_sym  MCP6002.tokito_sym  MCP6004.tokito_sym  OPA2134.tokito_sym  PCF8574.tokito_sym  W25Q128.tokito_sym
assets/base-symbols/Logic_74xx/: 74HC00.tokito_sym  74HC04.tokito_sym  74HC08.tokito_sym  74HC165.tokito_sym  74HC32.tokito_sym  74HC595.tokito_sym  74HC86.tokito_sym
assets/base-symbols/MCU/: ATmega328P.tokito_sym  ESP32-WROOM.tokito_sym  RP2040.tokito_sym  STM32F103C8.tokito_sym  STM32F407VG.tokito_sym
assets/base-symbols/Power/: +12V.tokito_sym  +3V3.tokito_sym  +5V.tokito_sym  -5V.tokito_sym  Earth.tokito_sym  GND.tokito_sym  PWR_FLAG.tokito_sym  VCC.tokito_sym  VDD.tokito_sym  VEE.tokito_sym  (+1 more)
docs/: API.md  ARCHITECTURE.md  EDITOR_PLAN.md  PRODUCT_PLAN.md  README.md  SCHEMATIC_EDITOR.md  SETTINGS.md
memory/: architecture.md  board-workflow.md  data-model.md  docs-reference.md  env-linux-wslg.md  env-vars.md  http-api.md  product.md  projects-and-exports.md  settings-and-providers.md  testing-and-ci.md  ui-design-language.md
migrations/: 20240507120000_initial.sql  20260207120000_auth_quotas_agent.sql  20260208130000_design_intent_research.sql  20260508120000_design_research_kind_firecrawl_search.sql  20260515120000_schematic_documents.sql  20260617000000_projects.sql  20260618120000_design_notes.sql  20260619120000_research_annotation.sql
native/: Cargo.toml
native/src/: base_symbols.rs  bootstrap.rs  canvas.rs  component_value.rs  kicad_symbols.rs  lib.rs  main.rs  paths.rs  symbol_library.rs  symbols_draw.rs  theme.rs  util.rs
native/src/app/: impl_eframe.rs  impl_ui.rs  mod.rs  studio_dock.rs
native/src/app/studio/: agent.rs  bom.rs  build.rs  canvas.rs  chrome.rs  command_palette.rs  console.rs  design_manager.rs  inspector.rs  layout.rs  messages.rs  mod.rs  place_panel.rs  projects.rs  research.rs  settings.rs  shortcuts.rs  viewer3d.rs
native/src/editor/: annot_graphics.rs  commands.rs  connectivity.rs  document.rs  geometry.rs  hit_test.rs  interaction.rs  junctions.rs  label_placement.rs  live_erc.rs  mod.rs  net_sync.rs  netlist_golden.rs  render.rs  sheets.rs  state.rs  tools.rs  viewport.rs  wire_push.rs  wire_reroute.rs  wire_snap.rs
native/src/mcad_viewer/: mod.rs  raster.rs  scene.rs
native/src/symbol_format/: lib_file.rs  mod.rs  sexpr.rs
native/src/symbol_gen/: mod.rs
native/src/ui/: icons.rs  layout.rs  mod.rs  table.rs  toast.rs  tokens.rs  typography.rs  widgets.rs
scripts/: audit.ps1  board.sh  package-windows.ps1  run-linux.sh  test.ps1
src/: config.rs  config_provider.rs  error.rs  lib.rs  main.rs  paths.rs  project_toml.rs  router.rs  secrets.rs  server.rs  settings.rs  test_support.rs  user_messages.rs
src/auth/: jwt.rs  middleware.rs  mod.rs
src/connectivity/: disjoint_set.rs  mod.rs  net_name.rs  point.rs  rebuild.rs
src/db/: embedded.rs  mod.rs  pg_backup.rs  pg_embed_util.rs
src/handlers/: agent.rs  auth.rs  catalog.rs  copilot.rs  designs.rs  health.rs  integrations.rs  manufacturers.rs  mod.rs  offers.rs  parts.rs
src/models/: bom.rs  catalog.rs  copilot.rs  design.rs  edit_ops.rs  erc.rs  manufacturer.rs  mod.rs  offer.rs  part.rs  project.rs  schematic.rs  schematic_document.rs
src/services/: agent.rs  backup.rs  bom_sync.rs  catalog_part.rs  catalog_search.rs  design_pipeline.rs  erc_fixes.rs  export_bundle.rs  export_service.rs  firecrawl.rs  footprint_map.rs  lcsc.rs  llm.rs  mcad_export.rs  mod.rs  netlist.rs  nexar.rs  offers_sync.rs  pdf_export.rs  project_archive.rs  research_pipeline.rs  research_retrieval.rs  schematic_gen.rs  schematic_graphics.rs  schematic_validate.rs  sexp_netlist.rs  svg_export.rs  xai.rs
src/store/: account.rs  bom.rs  designs.rs  intent.rs  manufacturers.rs  mod.rs  offers.rs  parts.rs  projects.rs  research.rs  schematic.rs  schematic_document.rs
tests/: ai_pipeline_fixtures.rs  api_designs.rs  api_schematic.rs  db_stability.rs  golden_document.rs  golden_netlist_move.rs  integration.rs  notes_research.rs  project_workspace.rs  services_exports.rs  spec_compliance.rs
tests/integration/: api_parts.rs  api_schematic.rs  db_stability.rs  golden_document.rs  golden_netlist_move.rs  main.rs  notes_research.rs  spec_compliance.rs
(+27 files in other folders)
