[package]
name = "tokito"
version = "0.1.0"
edition = "2021"
description = "Tokito — schematic + BOM API (MVP)"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Afnanksalal/tokito"
homepage = "https://github.com/Afnanksalal/tokito"
rust-version = "1.74"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
hex = "0.4"
jsonwebtoken = "9"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
http-body-util = "0.1"
serde_json = "1"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace]
members = [".", "native"]
resolver = "2"
