[package]
name = "tokito"
version = "0.1.0"
edition = "2021"
description = "AI-assisted schematic studio (desktop)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Afnanksalal/tokito"
homepage = "https://github.com/Afnanksalal/tokito"
rust-version = "1.88"

[features]
default = []
test-support = []

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
hex = "0.4"
jsonwebtoken = "9"
pg-embed = { version = "1.0", features = ["rt_tokio_migrate"] }
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.13", default-features = false, features = [
    "form",
    "json",
    "rustls",
] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
url = "2"
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4", "v5"] }
zip = "8.6"
keyring = "3"

[dev-dependencies]
http-body-util = "0.1"
insta = { version = "1", features = ["json", "yaml", "redactions"] }
serde_json = "1"
tokito = { path = ".", features = ["test-support"] }
tower = { version = "0.5", features = ["util"] }
zip = "8.6"

# Single custom-harness binary that owns the embedded-Postgres lifecycle and
# all integration submodules. Replaces the previous 11 separate test binaries.
[[test]]
name = "integration"
path = "tests/integration/main.rs"
harness = true

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace]
members = [".", "native"]
resolver = "2"
