[package]
name = "tokito-native"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Tokito native desktop app (egui)"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

eframe = "0.27"
egui = "0.27"
egui_extras = "0.27"

uuid = { version = "1", features = ["v4", "serde"] }

tokito = { path = ".." }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
bcrypt = "0.15"

