[package]
name = "tokito-native"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Tokito native desktop app (egui)"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Afnanksalal/tokito"
homepage = "https://github.com/Afnanksalal/tokito"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
egui_dock = "0.14"

uuid = { version = "1", features = ["v4", "serde"] }
kiutils_kicad = "0.3"

tokito = { path = ".." }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
bcrypt = "0.15"

