[package]
name = "tokito-native"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Tokito desktop studio (egui)"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/VtronTokito/tokito"
homepage = "https://github.com/VtronTokito/tokito"
default-run = "tokito-native"

[lints.rust]
dead_code = "allow"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
collapsible_if = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"

[lib]
name = "tokito_native"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
egui_dock = "0.14"
egui-phosphor = { version = "0.7", default-features = false, features = ["regular"] }
# tokito_ui — shared egui component library (github.com/VtronTokito/ui).
tokito_ui = { git = "https://github.com/VtronTokito/ui" }

uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

tokito = { path = ".." }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
bcrypt = "0.15"
dirs = "6"
glam = "0.29"
rfd = "0.15"
open = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dark-light = "2"

[[bin]]
name = "tokito-native"
path = "src/main.rs"

[[bin]]
name = "tokito-symbol-import"
path = "src/bin/symbol_import.rs"

[[bin]]
name = "generate-base-symbols"
path = "src/bin/generate_base_symbols.rs"
